2008-12-08  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/notification-groups.conf: Change destination of email-message
	category to Modest.

2008-12-08  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c
	  (hd_bookmark_manager_parse_bookmark_files): Only call
	  hd_bookmark_manager_add_bookmark_item if the bookmarks file was
	  parsed successfully.

2008-12-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* com.nokia.HildonHome.service.in:
	* org.freedesktop.Notifications.service.in: Add D-Bus .service files.

	* Makefile.am:  Install the .service files.

	* configure.ac: Add .service files.

	* debian/hildon-home.install: Install .service file in package.

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update.

	* src/hd-incoming-events.c (group_update): Add missing cast to gint64.

	* src/notification-groups.conf: Add more groups. Fixes NB#94404
	  NB#94408

2008-12-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-add-task-dialog.c (hd_add_task_dialog_init): Use pixbuf in
	  the icon renderer in the application list.

	* src/hd-task-manager.c (hd_task_manager_load_desktop_file,
	  hd_task_manager_init): Only scan .desktop files of type Application.
	  Store a pixbuf of the icon for the Add shortcut dialog. Add -w50
	  workaround.

2008-12-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.0

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c:
	  (hd_change_background_dialog_class_init, get_image_label_from_uri,
	  response_cb, hd_change_background_dialog_init): Implement getting
	  list of available background images and make it possible to select
	  them.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu):
	Add call to ungrab pointer (moved from hildon-desktop).

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>
